TUP-2120: Fixed throw NPE when studio startup within svn mode

--- a/main/plugins/org.talend.mdm.repository/resources/system/datamodel/UpdateReport_0.1.properties
+++ b/main/plugins/org.talend.mdm.repository/resources/system/datamodel/UpdateReport_0.1.properties
@@ -4,10 +4,13 @@
     <author href="../../../talend.project#_GXlSkLBMEeGJU-H1zi4xKg"/>
   </TalendProperties:Property>
   <TalendProperties:ItemState xmi:id="_bVcMkLBMEeGJU-H1zi4xKg" path="System"/>
-  <mdmproperties:WSDataModelItem xmi:id="_ze9uYq-pEeGb7p2glQb3fA" property="_ze9uYK-pEeGb7p2glQb3fA" state="_bVcMkLBMEeGJU-H1zi4xKg" referenceResources="_ze9uY6-pEeGb7p2glQb3fA">
+  <mdmproperties:WSDataModelItem xmi:id="_ze9uYq-pEeGb7p2glQb3fA" property="_ze9uYK-pEeGb7p2glQb3fA" state="_bVcMkLBMEeGJU-H1zi4xKg" referenceResources="_ze9uY6-pEeGb7p2glQb3fA _hUIz0AI4EeSdSeAKLszRVw">
     <wsDataModel href="UpdateReport_0.1.item#_ze9uZK-pEeGb7p2glQb3fA"/>
   </mdmproperties:WSDataModelItem>
   <TalendProperties:ReferenceFileItem xmi:id="_ze9uY6-pEeGb7p2glQb3fA" name="UpdateReport_0.1.xsd" extension="xsd">
     <content href="UpdateReport_0.1.xsd#/"/>
+  </TalendProperties:ReferenceFileItem>
+  <TalendProperties:ReferenceFileItem xmi:id="_hUIz0AI4EeSdSeAKLszRVw" extension="mapinfo">
+    <content href="UpdateReport_0.1.mapinfo#/"/>
   </TalendProperties:ReferenceFileItem>
 </xmi:XMI>
