TMDM-7645: Force generated code to JAX-WS API 2.1

--- a/main/plugins/org.talend.mdm.ws/pom.xml
+++ b/main/plugins/org.talend.mdm.ws/pom.xml
@@ -64,6 +64,7 @@
                         <configuration>
                             <sourceRoot>${basedir}/src</sourceRoot>
                             <defaultOptions>
+                                <frontEnd>jaxws21</frontEnd>
                                 <extraargs>
                                     <extraarg>-client</extraarg>
                                     <extraarg>-verbose</extraarg>
